--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
     </h1> 
 
     <ul class="nav nav-pills">
-      <li [class.active]="viewMode == 'map'"><a (click)="viewMode = 'map'" href="">Map view</a></li>
-      <li [class.active]="viewMode == 'list'"><a (click)="viewMode = 'list'" href="">List view</a></li>
+      <li [class.active]="viewMode == 'map'"><a (click)="viewMode = 'map'" href="#">Map view</a></li>
+      <li [class.active]="viewMode == 'list'"><a (click)="viewMode = 'list'" href="#">List view</a></li>
     </ul>
     <div [ngSwitch]="viewMode">
         <div *ngSwitchCase="'map'">Map view content</div>
